improve static asset handling

--- a/src/app.css
+++ b/src/app.css
@@ -8,10 +8,10 @@
 		font-style: normal;
 		font-weight: 400;
 		font-display: swap;
-		src: url(/fonts/Bergan.woff2) format('woff2');
+		src: url($lib/assets/fonts/Bergan.woff2) format('woff2');
 	}
 }
 
 body {
-	@apply bg-neutral-800 bg-[url('/images/otis-redding.png'),_url('/images/dots.svg')] bg-scroll bg-center bg-repeat text-yellow-100;
+	@apply bg-neutral-800 bg-[url('$lib/assets/images/noise.png'),_url('$lib/assets/images/dots.svg')] bg-scroll bg-center bg-repeat text-yellow-100;
 }
